chore: minor updates
Signed-off-by: Dale Lane <dale.lane@uk.ibm.com>