@@ -1,10 +1,10 @@
 package uk.co.dalelane.kafkaconnect.xboxlive.fetcher;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
@@ -42,7 +42,7 @@ public abstract class XboxTimerTask extends TimerTask {
 
         // check that a valid URL has been provided
         try {
-            urlObj = new URL(url);
+            urlObj = URI.create(url).toURL();
         }
         catch (MalformedURLException e) {
             log.error("failed to create URL", e);
